# fpcia

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  snapshot.txt
notebooks/: experiments.ipynb
src/fpcia/: __init__.py  constants.py  data.py  eda.py  etl.py  model.py  unsupervised.py  utils.py
src/fpcia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_general.py  test_performance.py
tests/resources/: cities.csv  cities.json  cities.xml  cities.xsd
