[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'


[project]
name = "fpcia"
dynamic = ["version"]
#version = "0.0.1"
requires-python = ">=3.12"

description = "This is a standalone Python library which contains code for  working with various AI library."
readme = "README.md"
authors = [{ name = "Francis Pradel", email = "francis.pradel@gmail.com" }]

maintainers = [{ name = "Francis Pradel", email = "francis.pradel@gmail.com" }]

dependencies = [
    "geopy==2.4.1",
    "numpy==2.2.5",
    "pandas==2.2.3",
    "plotly==6.1.2",
    "plotly-express==0.4.1",
    "pydantic==2.10.1",
    "python-dotenv",
    "scikit-learn==1.7",
    "streamlit==1.50.0",
]
license = "LicenseRef-MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["algorithm", "EDA", "AI", "data"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fpcia = ["*.xlsx"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "F"]
ignore = ["F401", "F841", "F403", "F405", "E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
