[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'


[project]
name = "fpcia"
dynamic = ["version"]
requires-python = ">=3.12"

description = "This is a standalone Python library which contains code for  working with various AI library."
readme = "README.md"
authors = [{ name = "Francis Pradel", email = "francis.pradel@gmail.com" }]

maintainers = [{ name = "Francis Pradel", email = "francis.pradel@gmail.com" }]

dependencies = [
    "geopy",
    "numpy",
    "pandas",
    "plotly",
    "plotly-express",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "streamlit",
]
license = "LicenseRef-MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["algorithm", "EDA", "AI", "data"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fpcia = ["*.xlsx"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "F"]
ignore = ["F401", "F841", "F403", "F405", "E501"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
